Standardised button styling.

--- a/Resources/Styles/colors.scss
+++ b/Resources/Styles/colors.scss
@@ -115,9 +115,8 @@
 
   --copyable-input-background: var(--very-very-light-grey);
 
-  --button-background: var(--very-light-blue);
-  --button-text: var(--mid-blue);
-  --button-border: var(--light-blue);
+  --button-background: var(--mid-blue);
+  --button-text: var(--very-light-blue);
 
   --rule-background: var(--light-blue);
   --rule-thin-background: var(--light-grey);
