--- a/Resources/Styles/base.scss
+++ b/Resources/Styles/base.scss
@@ -132,18 +132,21 @@ noscript {
 }
 
 button {
-  padding: 2px 4px;
-  margin: 0 5px;
-  border: 1px var(--button-border) solid;
-  background-color: var(--button-background);
+  margin: 0;
+  padding: 8px 16px;
   color: var(--button-text);
-  border-radius: 3px;
-  font-weight: 600;
-  font-size: 9px;
-}
+  background-color: var(--button-background);
+  border-radius: 4px;
+  border: none;
+  font-size: 15px;
 
-button:focus {
-  outline: none;
+  &:active {
+    filter: brightness(140%);
+  }
+
+  &:focus {
+    outline: none;
+  }
 }
 
 .green {
