--- a/Resources/Styles/copyable_input.scss
+++ b/Resources/Styles/copyable_input.scss
@@ -26,7 +26,7 @@
     padding: 5px 10px 5px 5px;
     color: var(--input-text);
     background-color: var(--copyable-input-background);
-    border: 1px var(--grey) solid;
+    border: 1px var(--copyable-input-border) solid;
     border-radius: 4px 0 0 4px;
     border-right: none;
     font-family: monospace;
