--- a/Resources/Styles/colors.scss
+++ b/Resources/Styles/colors.scss
@@ -82,6 +82,8 @@
   --panel-background: var(--very-light-grey);
   --panel-border: var(--light-grey);
   --panel-shadow: 0 6px 10px 5px rgba(0, 0, 0, 0.1);
+  --panel-underlay-background: var(--black);
+  --panel-underlay-opacity: 0.5;
 
   --green-text: var(--light-green);
   --orange-text: var(--orange);
@@ -162,6 +164,7 @@
 
     --panel-background: var(--very-dark-grey);
     --panel-border: var(--dark-grey);
+    --panel-underlay-opacity: 0.8;
 
     --green-text: var(--mid-green);
 
