--- a/Resources/Styles/panel.scss
+++ b/Resources/Styles/panel.scss
@@ -32,7 +32,7 @@
   background-color: var(--panel-background);
   border-top: 3px var(--panel-border) solid;
   box-shadow: var(--panel-shadow);
-  z-index: 999;
+  z-index: 1000;
 
   button.close {
     // Using float is unusual these days but it's the easiest way to make the close
@@ -46,4 +46,15 @@
     background: none;
     color: var(--page-text);
   }
+}
+
+#panel_underlay {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  opacity: var(--panel-underlay-opacity);
+  background-color: var(--panel-underlay-background);
+  z-index: 999;
 }
