Removed hidden animation as it was sometimes showing on page load.

--- a/Resources/Styles/base.scss
+++ b/Resources/Styles/base.scss
@@ -205,9 +205,7 @@ a.download {
 }
 
 .hidden {
-  opacity: 0;
-  visibility: hidden;
-  transition: visibility 0s 0.2s, opacity 0.2s linear;
+  display: none;
 }
 
 .trimmed {
