--- a/Resources/Styles/matrix.scss
+++ b/Resources/Styles/matrix.scss
@@ -31,6 +31,12 @@
     margin: 5px 0;
   }
 
+  @media screen and (max-width: $mobile-breakpoint) {
+    li {
+      margin: 30px 0;
+    }
+  }
+
   .row {
     display: flex;
     flex-direction: row;
