Fix the padding on the nav bar search button caused by the generic button changes.

--- a/Resources/Styles/search.scss
+++ b/Resources/Styles/search.scss
@@ -139,6 +139,7 @@ nav {
 
       button {
         margin: 0;
+        padding: 0;
         border: none;
         background-color: var(--input-background);
         background-image: var(--image-magnifying-glass);
