Fixed iPad/iPhone Safari bug.

--- a/FrontEnd/styles/search.scss
+++ b/FrontEnd/styles/search.scss
@@ -127,6 +127,7 @@ nav {
         color: var(--input-text);
         background-color: var(--input-background);
         border: none;
+        -webkit-appearance: none;
 
         &:focus {
           outline: none;
