Added “Matching keywords:” into the package display.
This makes it much more clear that this is not *all* keywords and also helps to solve the border inside a border problem.

--- a/FrontEnd/styles/keywords.scss
+++ b/FrontEnd/styles/keywords.scss
@@ -42,4 +42,15 @@ ul.keywords {
       background-color: var(--bordered-button-hover);
     }
   }
+
+  &.matching li:first-child {
+    border: none;
+    background-color: inherit;
+
+    & > span {
+      padding: 0;
+      color: var(--page-dimmed-text);
+      background-color: inherit;
+    }
+  }
 }
