--- a/FrontEnd/styles/base.scss
+++ b/FrontEnd/styles/base.scss
@@ -212,3 +212,15 @@ a.download {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+spi-overflowing-list {
+  ul {
+    // This CSS is augmented with a `max-height` declaration defined via
+    // the custom element in overflowing_list.js.
+    overflow: hidden;
+  }
+
+  .show_more {
+    font-size: 13px;
+  }
+}
