--- a/FrontEnd/styles/keywords.scss
+++ b/FrontEnd/styles/keywords.scss
@@ -33,11 +33,11 @@ ul.keywords {
 
     & > a,
     & > span {
-      display: block;
       padding: 2px 6px;
     }
 
     & > span {
+      display: inline-block;
       color: var(--page-text);
       background-color: var(--bordered-button-hover);
     }
