Converted the overflowing list to be a stimulus component.

--- a/FrontEnd/main.scss
+++ b/FrontEnd/main.scss
@@ -41,3 +41,4 @@ $mobile-breakpoint: 767px;
 @import 'styles/tab-bar.scss';
 @import 'styles/keywords.scss';
 @import 'styles/build-monitor.scss';
+@import 'styles/overflowing_list.scss';
