--- a/FrontEnd/styles/base.scss
+++ b/FrontEnd/styles/base.scss
@@ -197,6 +197,17 @@ a.download {
   }
 }
 
+a.big_green_button {
+  display: inline-block;
+  padding: 10px 20px;
+  margin: 20px;
+  text-align: center;
+  background-color: var(--mid-green);
+  color: var(--white);
+  font-size: 18px;
+  border-left: 3px var(--light-green) solid;
+}
+
 .announcement {
   margin: 0;
   padding: 16px 0;
