Renamed panel to modal panel.

--- a/FrontEnd/main.scss
+++ b/FrontEnd/main.scss
@@ -22,7 +22,7 @@ $mobile-breakpoint: 767px;
 @import 'styles/base.scss';
 @import 'styles/scta.scss';
 @import 'styles/layout.scss';
-@import 'styles/panel.scss';
+@import 'styles/modal_panel.scss';
 @import 'styles/header_footer.scss';
 @import 'styles/home.scss';
 @import 'styles/markdown.scss';
