I don’t even know how this happened!

--- a/FrontEnd/main.scss
+++ b/FrontEnd/main.scss
@@ -37,8 +37,8 @@ $mobile-breakpoint: 767px;
 @import 'styles/error.scss';
 @import 'styles/readme.scss';
 @import 'styles/spinner.scss';
-@import 'styles/github-highlighting.scss';
-@import 'styles/tab-bar.scss';
+@import 'styles/github_highlighting.scss';
+@import 'styles/tab_bar.scss';
 @import 'styles/keywords.scss';
-@import 'styles/build-monitor.scss';
+@import 'styles/build_monitor.scss';
 @import 'styles/overflowing_list.scss';
