Added the new link under the package name.

--- a/FrontEnd/styles/package.scss
+++ b/FrontEnd/styles/package.scss
@@ -23,6 +23,12 @@
     padding: 0;
   }
 
+  .package_title {
+    p {
+      margin: 0;
+    }
+  }
+
   p.summary {
     margin-top: 0;
     font-size: 19px;
