--- a/FrontEnd/styles/package.scss
+++ b/FrontEnd/styles/package.scss
@@ -133,6 +133,15 @@
           &:hover {
             background-color: var(--bordered-button-hover);
           }
+
+          &[href^='https://github.com/' i]
+          {
+            padding-left: 33px;
+            background-size: 18px;
+            background-repeat: no-repeat;
+            background-position: center left 8px;
+            background-image: var(--image-github);
+          }
         }
       }
     }
