--- a/FrontEnd/styles/colors.scss
+++ b/FrontEnd/styles/colors.scss
@@ -153,6 +153,9 @@
 
   --search-filter-background: var(--very-light-grey);
   --search-filter-ampersand-color: var(--dark-grey);
+
+  --big-button-green-background: var(--mid-green);
+  --big-button-green-border: var(--light-green);
 }
 
 /* Dark mode semantic color overrides */
