Added new file for breadcrumb styling.

--- a/FrontEnd/main.scss
+++ b/FrontEnd/main.scss
@@ -18,6 +18,7 @@
 $mobile-breakpoint: 740px;
 
 @import 'styles/base.scss';
+@import 'styles/breadcrumbs.scss';
 @import 'styles/build_logs.scss';
 @import 'styles/build_monitor.scss';
 @import 'styles/colors.scss';
