--- a/FrontEnd/styles/breadcrumbs.scss
+++ b/FrontEnd/styles/breadcrumbs.scss
@@ -14,5 +14,51 @@
  */
 
 .breadcrumbs {
-  background: red;
+  .inner {
+    padding: 0 10px;
+  }
+
+  ul {
+    display: flex;
+    gap: 20px;
+    padding: 0;
+    list-style: none;
+
+    @media screen and (max-width: $mobile-breakpoint) {
+      flex-direction: column;
+      gap: 0;
+    }
+
+    li {
+      position: relative;
+
+      a {
+        padding: 5px 0;
+        width: 100%;
+        height: 100%;
+      }
+
+      &:not(:first-child) {
+        &::before {
+          content: '';
+          position: absolute;
+          background-color: var(--breadcrumb);
+          top: calc(50% - 6px);
+          left: -16px;
+          width: 12px;
+          height: 12px;
+          clip-path: polygon(50% 0, 75% 50%, 50% 100%, 25% 100%, 50% 50%, 25% 0);
+        }
+
+        @media screen and (max-width: $mobile-breakpoint) {
+          margin-left: 20px;
+        }
+      }
+    }
+  }
+}
+
+.breadcrumbs + main .inner {
+  padding-top: 0;
+  padding-bottom: 0;
 }
