Switch out the link to the author page with the owner/repo text.

--- a/FrontEnd/styles/package.scss
+++ b/FrontEnd/styles/package.scss
@@ -24,8 +24,22 @@
   }
 
   .package_title {
-    p {
-      margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+
+    small {
+      color: var(--page-dimmed-text);
+
+      > span {
+        color: var(--page-text);
+      }
+
+      &::before {
+        content: '–';
+        margin: 0 2px 0 3px;
+        color: var(--page-dimmed-text);
+      }
     }
   }
 
