--- a/FrontEnd/styles/tab_bar.scss
+++ b/FrontEnd/styles/tab_bar.scss
@@ -20,7 +20,7 @@
 nav[data-controller='tab-bar'] {
   > ul {
     margin: 20px 0;
-    padding: 0;
+    padding: 0 0 0 10px;
     background-color: var(--tab-bar-background);
     box-shadow: inset 0 -3px var(--tab-bar-border);
     list-style-type: none;
