--- a/FrontEnd/styles/colors.scss
+++ b/FrontEnd/styles/colors.scss
@@ -105,6 +105,7 @@
   --header-gradient-end: rgba(255, 255, 255, 0.05);
 
   --breadcrumb: var(--light-grey);
+  --breadcrumb-header: var(--grey);
 
   --announcement-background: var(--very-light-grey);
 
