--- a/FrontEnd/styles/package.scss
+++ b/FrontEnd/styles/package.scss
@@ -113,6 +113,8 @@
       }
 
       li.plugins {
+        background-size: 14px;
+        background-position: 3px center;
         background-image: var(--image-plug);
       }
 
