Add keyword counts
- Introduce WeighedKeyword model.
- Add migration introducing `weighted_keywords` display.
- Add migration for weighted_keywords to database migration config.
- Refresh materialized view for keyword_weights.
- Get some nice numbers to display counts up to 5 positions.
- Format numbers with a nice "k" shorthand.
- Add CSS for keyword counts.
- Fix unit tests.
- Note, if a repository has no keywords, we don't even need to go to the database to try and fetch counts for those keywords.
- Use default string interpolation for `kiloPostfixedQuantity`.

--- a/FrontEnd/styles/package.scss
+++ b/FrontEnd/styles/package.scss
@@ -121,6 +121,15 @@
       li.keywords {
         grid-column-start: span 2;
         background-image: var(--image-tag);
+        span.keyword-count {
+              border-radius: 8px;
+              padding: 1px;
+              background: var(--keyword-count-color);//#dfdfdf;
+              font-size: 8px;
+              color: var(--keyword-count-backgroundcolor);//#464646;
+              vertical-align: text-top;
+              margin-left: 3px;
+        }
       }
     }
 
