--- a/FrontEnd/styles/colors.scss
+++ b/FrontEnd/styles/colors.scss
@@ -49,6 +49,7 @@
   --white: #ffffff;
 
   --twitter-blue: #1d9bf0;
+  --gainsboro: #dcdcdc;
 }
 
 /* Dark mode base color overrides */
@@ -163,6 +164,9 @@
   --big-button-green-border: var(--light-green);
   --big-button-blue-background: var(--mid-blue);
   --big-button-blue-border: var(--light-blue);
+  
+  --keyword-count-color: #dfdfdf;
+  --keyword-count-backgroundcolor: #464646;
 }
 
 /* Dark mode semantic color overrides */
@@ -236,5 +240,8 @@
 
     --big-button-blue-background: var(--mid-blue);
     --big-button-blue-border: var(--light-blue);
+    
+    --keyword-count-color: #464646;
+    --keyword-count-backgroundcolor: #dfdfdf;
   }
 }
