More tweaks to the Twitter spaces CTA and home page sidebar.

--- a/FrontEnd/styles/colors.scss
+++ b/FrontEnd/styles/colors.scss
@@ -47,6 +47,8 @@
   --very-light-grey: #f1f1f1;
   --very-very-light-grey: #f8f8f8;
   --white: #ffffff;
+
+  --twitter-blue: #1d9bf0;
 }
 
 /* Dark mode base color overrides */
