Fixed corrupted CSS.

--- a/FrontEnd/docc.scss
+++ b/FrontEnd/docc.scss
@@ -149,7 +149,8 @@ header.spi {
 
           .choices {
             position: relative;
-            padding: ul {
+
+            ul {
               display: none;
               padding: 15px;
               position: absolute;
