Add a note about DocC on  Add Package page.

--- a/FrontEnd/styles/base.scss
+++ b/FrontEnd/styles/base.scss
@@ -93,6 +93,7 @@ blockquote {
 
 .note {
   padding: 0 20px;
+  margin: 0 10px 20px;
   border: 1px solid;
   color: var(--note-text);
   background-color: var(--note-background);
