--- a/FrontEnd/styles/package.scss
+++ b/FrontEnd/styles/package.scss
@@ -122,14 +122,18 @@
         grid-column-start: span 2;
         background-image: var(--image-tag);
 
-        span.keyword-count {
-          border-radius: 8px;
-          padding: 1px;
-          background: var(--keyword-count-color);
-          font-size: 8px;
-          color: var(--keyword-count-backgroundcolor);
-          vertical-align: text-top;
-          margin-left: 3px;
+        a {
+          display: flex;
+          align-items: center;
+          gap: 5px;
+
+          span {
+            padding: 1px 5px;
+            border-radius: 20px;
+            background: var(--keyword-count-color);
+            color: var(--keyword-count-backgroundcolor);
+            font-size: 10px;
+          }
         }
       }
     }
