Add the book style to the list in advance of the image as we’re about to experiment!

--- a/FrontEnd/styles/package_list.scss
+++ b/FrontEnd/styles/package_list.scss
@@ -76,6 +76,10 @@
       li.stars::before {
         background-image: var(--image-star);
       }
+
+      li.has_documentation::before {
+        background-image: var(--image-book);
+      }
     }
 
     @media screen and (max-width: $mobile-breakpoint) {
