Book image variation 3.

--- a/FrontEnd/styles/package_list.scss
+++ b/FrontEnd/styles/package_list.scss
@@ -79,6 +79,7 @@
 
       li.has_documentation::before {
         background-image: var(--image-book);
+        background-size: 84%;
       }
     }
 
