--- a/FrontEnd/docc.scss
+++ b/FrontEnd/docc.scss
@@ -158,26 +158,6 @@ header.spi {
               background-color: var(--header-background);
               box-shadow: var(--panel-shadow);
               border-top: 3px rgba(255, 255, 255, 0.2) solid;
-
-              li {
-                padding: 0;
-                padding-left: 20px;
-                background-size: 14px;
-                background-repeat: no-repeat;
-                background-position: center left;
-
-                &.branch {
-                  background-image: var(--image-branch);
-                }
-
-                &.stable {
-                  background-image: var(--image-stable);
-                }
-
-                &.beta {
-                  background-image: var(--image-beta);
-                }
-              }
             }
 
             &:hover {
@@ -216,6 +196,28 @@ header.spi {
     @media (prefers-color-scheme: dark) {
       background-color: rgba(0, 0, 0, 0.25);
     }
+  }
+
+  span.stable,
+  span.beta,
+  span.branch {
+    font-weight: 600;
+    padding-left: 18px;
+    background-size: 14px;
+    background-repeat: no-repeat;
+    background-position: top 2px left;
+  }
+
+  span.stable {
+    background-image: var(--image-stable);
+  }
+
+  span.beta {
+    background-image: var(--image-beta);
+  }
+
+  span.branch {
+    background-image: var(--image-branch);
   }
 }
 
